# pmpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
chapters/ch02/: CMakeLists.txt  vec_add.cu
chapters/ch03/: CMakeLists.txt  blur.cu  grayscale.cu  matmul.cu
chapters/ch04/: CMakeLists.txt  device_properties.cu
chapters/ch05/: CMakeLists.txt  matmul_tiled.cu  matmul_tiled_dynamic.cu
chapters/ch06/: CMakeLists.txt  matmul_corner_turning.cu  matmul_thread_coarsening.cu
chapters/ch07/: CMakeLists.txt  benchmark.cu  benchmark.py  bindings.cpp  functions.cu  functions.cuh  functions_torch.cu  kernels.cu  kernels.cuh  main.cu  main.py
chapters/ch07/kernels/: kernels2d.cu  kernels2d.cuh  kernels3d.cu  kernels3d.cuh
chapters/ch08/: CMakeLists.txt  Makefile  benchmark.cu  diffusion.cu  stencil_sweep.cu  stencil_sweep.cuh
chapters/ch08/simulation/: allen_cahn_solver.py  main.py
chapters/ch09/: CMakeLists.txt  benchmark.cu  histogram.cu  histogram.cuh  kernels.cu  kernels.cuh
chapters/ch10/: CMakeLists.txt  benchmark.cu  kernels.cu  kernels.cuh  reductions.cu  reductions.cuh
chapters/ch11/: CMakeLists.txt  benchmark.cu  kernels.cu  kernels.cuh  scan.cu  scan.cuh
chapters/ch12/: CMakeLists.txt  benchmark.cu  kernels.cu  kernels.cuh  merge.cu  merge.cuh
chapters/ch13/: CMakeLists.txt  benchmark.cu  sorting.cu  sorting.cuh
chapters/ch13/kernels/: merge.cu  merge.cuh  radix.cu  radix.cuh
chapters/ch14/: CMakeLists.txt  benchmark.cu  formats.cu  formats.cuh  kernels.cu  kernels.cuh  sparse.cu  sparse.cuh
utils/: cpp_utils.hpp  cuda_utils.cuh  py_utils.py  random.hpp  utils.hpp
