[project]
name = "pmpp"
version = "0.1.0"
description = "PMPP book chapters code and exercises"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "isort>=7.0.0",
    "ruff>=0.14.4",
]
